# ComfyUI-JM-MiniMax-API

./: README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt
nodes/: __init__.py  check_video_status.py  download_video.py  load_audio.py  music_generation.py  text_to_speech.py  video_generation.py  voice_cloning.py  voice_design.py
web/: index.js  jm_audio_upload.js
